# Connect4

./: .gitignore  .pylintrc  pyproject.toml
.hypothesis/examples/06353473705591e7/: 588121dd2b3cbc83
.hypothesis/examples/0ca24ef4c16c64a9/: 227fb0e691952b2f
.hypothesis/examples/1c9f89e39cad2634/: 5047e09658524044
.hypothesis/examples/430de59dd814d1ca/: d0700ac07e40ce52
.hypothesis/examples/4ed1ff95fcd4c579/: 05a368d7161d0e4e  28c6ff46bd3d31fc  57c9e5e2f0769689  77bbcee6cfc1af64  f0329efa5f065d38
.hypothesis/examples/5a24f8192465ec0b/: 8ee36665083a16ab
.hypothesis/examples/5c79d5d655c91e52/: 29b0f44a9c4c1041  97e6c8200f327988  986002a958451e19
.hypothesis/examples/5ebec828b400a6a5/: 59bfd662c4990614  b37081f634d8d148
.hypothesis/examples/68157674bde9dcaa/: f4b2ac42cb4e33b7
.hypothesis/examples/6db03c264c51c192/: 3becc34092a374ec  4a0e8f3d55891715
.hypothesis/examples/7a7e35766f652da7/: e0e67bbaca5a4fb7
.hypothesis/examples/7bfbcd9546e7ebed/: 63a7c9d6f0e87cce
.hypothesis/examples/8387988c0d092b1c/: 7dbc6dead0391a52  a04d64e356bcf4c9  (+1 more)
documentation/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: __main__.py  main.py
src/logic/: ai.py  ai_settings.py  board.py  controller.py  game_state.py  manager.py  player.py
src/ui/: board_ui.py  button.py  check_box.py  game.py  input_field.py  pause_menu.py  ui_object.py  visualizer.py
tests/: ai_test.py  board_test.py  game_state_test.py
(+22 files in other folders)
